fixed overlapping on mobile

--- a/RandomQuoteMachine/css/style.css
+++ b/RandomQuoteMachine/css/style.css
@@ -38,6 +38,7 @@
   bottom: 5%;
   width: 100%;
   color:black !important;
+  margin-top: auto;
 }
 .mainText{
   font-family: 'Indie Flower';
